2016-01-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Fix a bug, reported by N. Abe, in isUTF8Nstream().

2015-10-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c: Enable composition of Hiragana, Katakana
	from combining character sequences to precomposed characters
	in upTeX.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.3 => 1.3.4dev.

2015-05-21  Karl Berry  <karl@tug.org>

	* TL'15.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: 1.3.3 (without the dev) for 2015 pretest.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
	* version.ac: Update version number 1.3.2 => 1.3.3dev.

2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* ptexenc.c: Accept Ctrl+Z as EOF in console (keyboard)
	in upTeX on Windows.

2014-04-17  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.2 (without the dev) for 2014 pretest.

2014-01-25  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* ptexenc.c: Return replacement character U+FFFD
	for illegal surrogate pair in console (keyboard) input
	in upTeX on Windows.

2014-01-03  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* ptexenc.c, ptexenc/unicode.h: Enable console (keyboard) input
	of Unicode characters in upTeX on Windows.

2013-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac (AH_TOP): Simplify the generation of c-auto.h.

2013-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/rebuild.am.

2013-06-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Provide right console output on windows for both
	ptex and uptex if --sjis-terminal option is given. (from T. Tanaka).

2013-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Remove redundant lines in input_line2(), which are
	inconsistent with those lines in texmfmp.c.

2013-06-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.1 => 1.3.2dev.
