@@ -840,6 +840,14 @@ long input_line2(FILE *fp, unsigned char *buff, long pos,
     return last;
 }
 
+boolean setinfileenc(FILE *fp, const char *str){
+    int enc;
+    enc = string_to_enc(str);
+    if (enc < 0) return false;
+    infile_enc[fileno(fp)] = enc;
+    return true;
+}
+
 #ifdef WIN32
 void clear_infile_enc(FILE *fp)
 {
